bem header & hero

--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
     <header class='header'>
                 <!-- навигация -->
         <div class="container flex">
-            <nav class="head-nav flex"> 
-                <a class="logo link" href="./index.html" lang="en"> <span class="logo-web">Web</span>Studio</a>   
-                <ul class="nav flex list ">
-                    <li class="nav-item"><a class="item link current" href="./index.html">Студия</a></li>
-                    <li class="nav-item"><a class="item link" href="./portfolio.html">Портфолио</a></li>
-                    <li class="nav-item"><a class="item link" href="#page_bottom">Контакты</a></li> 
+            <nav class="header__nav flex"> 
+                <a class="logo link" href="./index.html" lang="en"> <span class="logo__web">Web</span>Studio</a>   
+                <ul class="header__nav__list flex list ">
+                    <li class="header__nav__item"><a class="header__list__item link header-current" href="./index.html">Студия</a></li>
+                    <li class="header__nav__item"><a class="header__list__item link" href="./portfolio.html">Портфолио</a></li>
+                    <li class="header__nav__item"><a class="header__list__item link" href="#page_bottom">Контакты</a></li> 
                 </ul>   
             </nav>                       
-            <ul class="head-cont flex list">
-                <li class="head-cont-item">
-                    <a class="cont flex link" href="mailto:info@devstudio.com">
-                        <svg width="16" height="12" class="mail">
+            <ul class="header__content flex list">
+                <li class="header__content__list">
+                    <a class="header__content__item flex link" href="mailto:info@devstudio.com">
+                        <svg width="16" height="12" class="header__icon__mail">
                         <use href="./images/icons.svg#icon-mail">                    
                         </use>
                     </svg>
                         info@devstudio.com</a>
                 </li>
-                <li class="head-cont-item">
-                    <a class="cont flex link" href="tel:+380961111111">
-                    <svg width="10" height="16" class="smartphone">
+                <li class="header__content__list">
+                    <a class="header__content__item flex link" href="tel:+380961111111">
+                    <svg width="10" height="16" class="header__icon__smartphone">
                         <use href="./images/icons.svg#icon-smartphone">
                         </use>
                     </svg>
@@ -49,56 +49,56 @@
 
             <section class="hero">
                     <div class="container">
-                        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-                        <button class="hero-button" type="button" data-modal-open> Заказать услугу</button>
+                        <h1 class="hero__title">Эффективные решения для вашего бизнеса</h1>
+                        <button class="hero__button" type="button" data-modal-open> Заказать услугу</button>
                     </div>
             </section>
         <!-- webstudio prefs -->
-            <section class="section-half-bottom prefs" >
+            <section class="section-half-bottom" >
                         <div class="container">
                     <!-- hiden head h2  -->
                     <h2 class="hiden-title">Преимущества веб студии</h2>
                     <!--  hiden head h2 -->
                     <ul class='prefs flex list'>
-                        <li class='prefs-item'>
-                            <div class="prefs-bg">
+                        <li class='prefs__item'>
+                            <div class="prefs__bg">
                                 <svg width='70' height='70'>
                                     <use href="./images/icons.svg#icon-antenna">
                                     </use>
                                 </svg> 
                             </div>                        
-                            <h3 class='prefs-item-h'>Внимание к деталям</h3>
-                            <p class=prefs-item-p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+                            <h3 class='prefs__item__h'>Внимание к деталям</h3>
+                            <p class=prefs__item__p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
-                        <li class='prefs-item'>
-                            <div class="prefs-bg">
+                        <li class='prefs__item'>
+                            <div class="prefs__bg">
                                 <svg width='70' height='70'>
                                     <use href="./images/icons.svg#icon-clock">
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class='prefs-item-h'>Пунктуальность</h3>
-                            <p class=prefs-item-p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
+                            <h3 class='prefs__item__h'>Пунктуальность</h3>
+                            <p class=prefs__item__p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
-                        <li class='prefs-item'>
-                            <div class="prefs-bg">
+                        <li class='prefs__item'>
+                            <div class="prefs__bg">
                                 <svg width='70' height='70'>
                                     <use href=./images/icons.svg#icon-diagram>
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class='prefs-item-h'>Планирование</h3>
-                            <p class=prefs-item-p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                            <h3 class='prefs__item__h'>Планирование</h3>
+                            <p class=prefs__item__p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
-                        <li class='prefs-item'>
-                            <div class="prefs-bg">
+                        <li class='prefs__item'>
+                            <div class="prefs__bg">
                                 <svg width='70' height='70'>
                                     <use href=./images/icons.svg#icon-astronaut>
                                     </use>
                                 </svg>
                             </div>
-                            <h3 class='prefs-item-h'>Современные технологии</h3>
-                            <p class=prefs-item-p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                            <h3 class='prefs__item__h'>Современные технологии</h3>
+                            <p class=prefs__item__p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
                     </ul>
                         </div>
