--- a/index.html
+++ b/index.html
@@ -401,7 +401,7 @@
             </div>
         </div>
     </footer>
-    <div class="backdrop iss-hidden" data-modal>
+    <div class="backdrop is-hidden" data-modal>
         <div class="modal">
             <button class="modal-button-close" data-modal-close type="button">
                 <svg class="modal-button-close__icon-close">
