bem + scss разметка.

--- a/back-up-bem/index.html
+++ b/back-up-bem/index.html
@@ -111,11 +111,11 @@
                 <h2 class='section-title section-title--h-indent '>Чем мы занимаемся</h2>
                 <ul class='what-wedo__list flex list'>
                     <li class='what-wedo__list__item'><img src="./images/studio/hwd.jpg" alt="Десктопные приложения" width="370" height="294">
-                    <p class="wrapper-description wrapper-description--what-wedo">Десктопные приложения</p></li>
+                    <p class="what-wedo__list__p">Десктопные приложения</p></li>
                     <li class='what-wedo__list__item'><img src="./images/studio/hwd2.jpg" alt="Мобильные приложения" width="370" height="294">
-                    <p class="wrapper-description  wrapper-description--what-wedo">Мобильные приложения</p></li>
+                    <p class="what-wedo__list__p">Мобильные приложения</p></li>
                     <li class='what-wedo__list__item'><img src="./images/studio/hwd3.jpg" alt="Дизайнерские решения" width="370" height="294">
-                    <p class="wrapper-description wrapper-description--what-wedo">Дизайнерские решения</p></li>
+                    <p class="what-wedo__list__p">Дизайнерские решения</p></li>
                 </ul>
             </div>
          </section>
@@ -354,7 +354,7 @@
             </div>
                     <!-- follow container -->
             <div class="footer-follow footer-follow--right">
-                <h3 class="wrapper-description wrapper-description--follow-us">присоединяйтесь</h3>
+                <h3 class="footer-follow__title">присоединяйтесь</h3>
                 <ul class="social-list item-center flex list">
                     <li class="social-list__item social-list__item--background">
                         <a class="social-list__item__link social-list__item__link--text__white" href="https://www.instagram.com/">
@@ -390,9 +390,9 @@
             <div class="footer-subscribe footer-subscribe--end">
                 <form action="#" class="footer-subscribe-form">
                     <div>
-                        <label for="footer-email" class="wrapper-description wrapper-description--subscribe">Подпишитесь на рассылку</label>
+                        <label for="footer-email" class="footer-subscribe-form__text">Подпишитесь на рассылку</label>
                         <input id="footer-email" class="footer-subscribe-form__email" type="email" name="subscribe-email" placeholder="E-mail" required>
-                    </div>
+                        </div>
                     <button type="submit" class="footer-subscribe-button">Подписаться<svg class="footer-subscribe-button__icon">
                             <use href="./images/icons.svg#icon-subscribe"></use>
                         </svg>
