bem scss чутка доделал

--- a/portfolio.html
+++ b/portfolio.html
@@ -229,7 +229,7 @@
             </div>
             <!-- follow container -->
             <div class="footer-follow footer-follow--right">
-                <h3 class="footer-follow__title">присоединяйтесь</h3>
+                <h3 class="wrapper-description wrapper-description--follow-us">присоединяйтесь</h3>
                 <ul class="social-list item-center flex list">
                     <li class="social-list__item social-list__item--background">
                         <a class="social-list__item__link social-list__item__link--text__white"
@@ -268,7 +268,8 @@
             <div class="footer-subscribe footer-subscribe--end">
                 <form action="#" class="footer-subscribe-form">
                     <div>
-                        <label for="footer-email" class="footer-subscribe-form__text">Подпишитесь на рассылку</label>
+                        <label for="footer-email" class="wrapper-description wrapper-description--subscribe">Подпишитесь на
+                            рассылку</label>
                         <input id="footer-email" class="footer-subscribe-form__email" type="email" name="subscribe-email"
                             placeholder="E-mail" required>
                     </div>
