--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,11 @@
         <!-- навигация -->
         <div class="container item-center flex">
             <nav class="header__nav item-center flex">
-                <a class="logo logo--header link" href="./index.html" lang="en"> <span
-                        class="logo__web">Web</span>Studio</a>
+                <a class="logo logo--header link" href="./index.html" lang="en"> <span class="logo__web">Web</span>Studio</a>
                 <ul class="header__nav__list flex list ">
-                    <li class="header__nav__item"><a class="header__list__item link"
-                            href="./index.html">Студия</a></li>
-                    <li class="header__nav__item"><a class="header__list__item link  header-current" href="./portfolio.html">Портфолио</a>
+                    <li class="header__nav__item"><a class="header__list__item link" href="./index.html">Студия</a>
                     </li>
+                    <li class="header__nav__item"><a class="header__list__item link header-current" href="./portfolio.html">Портфолио</a></li>
                     <li class="header__nav__item"><a class="header__list__item link" href="#page_bottom">Контакты</a></li>
                 </ul>
             </nav>
